sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:14: error: not found: value c
    setValeur(i-c*ecart,v)
                ^